# neje_controller

./: .gitignore  README.md  bench-export.mjs  bench-gcode.mjs  bench-resume.mjs  bench-totals.mjs  bench-verify.mjs  bench.mjs  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  styles.css  types.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: grbl.rs  main.rs  serial.rs  state.rs
src/components/: ConnectionBar.tsx  DxfPanel.tsx  DxfPreview.tsx  JobPanel.tsx  JogPanel.tsx  LogView.tsx  PositionReadout.tsx  TestPatternPanel.tsx
src/lib/: api.ts  dxf.ts  gcode.ts  testPattern.ts
