[package]
name = "nejemax4-tauri"
version = "0.1.0"
description = "NEJE MAX4 laser engraver controller (Tauri v2)"
authors = ["Takuya Itabashi"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
# Tauri v2 core
tauri = { version = "2.1", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"

# Serial I/O (pure Rust; works cross-platform)
serialport = "4.5"

# Async runtime for the stream worker
tokio = { version = "1.40", features = ["rt-multi-thread", "sync", "macros", "time", "io-util"] }

# Serialization for IPC payloads
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Regex for GRBL status parsing
regex = "1.11"

# Thread-safe lazy statics
once_cell = "1.20"

# Better error handling
anyhow = "1.0"
thiserror = "1.0"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
# Ship smaller binaries. These shave off ~40% from the default.
lto = true
opt-level = "s"
codegen-units = 1
panic = "abort"
strip = true
